--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Raleway', sans-serif;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     letter-spacing: -.022em;
