--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -15,5 +15,54 @@ body {
 img {
     max-width: 100%; /* Afbeeldingen responsive maken */
 }
+div.kleur1 {
+    border: 5px solid #4AD9A0;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.kleur2 {
+    border: 5px solid #AE2525;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.kleur3 {
+    border: 5px solid #E0D7D7;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.kleur4 {
+    border: 5px solid #280F0F;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.kleur5 {
+    border: 5px solid #B0DDCB;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.kleur6 {
+    border: 5px solid #FFE922;
+    padding: 20px;
+    width: 275px;
+    border-radius: 10px;
+    text-align: center;
+}
+div.logo {
+    width: 100px;
+    height: 100px;
 
+}
+div.box2 {
+    align-content: space-between;
+}
 /* Voeg jouw css hieraan toe */
